--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
 
   #install
 install:
-  - plp install -r requierements.txt
+  - pip install -r requierements.txt
 
 #script
   #before_script
