--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,10 @@ install:
   
 script:
   - python3 test_fruits.py
+  - mkdir ShortStory
+  - cd ShortStory
+  - touch KKK
+  - echo 5
 
 #after script
   #after sucess
